{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 195,
  "lineage": "33196d81-f5c8-e649-d012-b16d9515a9b4",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "learn_terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:internet-gateway/igw-069add139ec64bb8d",
            "id": "igw-069add139ec64bb8d",
            "owner_id": "872018225617",
            "region": "ap-south-1",
            "tags": {
              "Name": "learn-terraform-igw"
            },
            "tags_all": {
              "Name": "learn-terraform-igw"
            },
            "vpc_id": "vpc-03c7e3d87d51cb2d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-069add139ec64bb8d",
            "id": "r-rtb-0c404598cbe31320e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c404598cbe31320e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0c404598cbe31320e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.learn_terraform_igw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:route-table/rtb-0c404598cbe31320e",
            "id": "rtb-0c404598cbe31320e",
            "owner_id": "872018225617",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069add139ec64bb8d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7e3d87d51cb2d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "rtb-0c404598cbe31320e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8e922987d3e9721",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c404598cbe31320e",
            "subnet_id": "subnet-074fbfdb37617790f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057fd1b689f0a96ef",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c404598cbe31320e",
            "subnet_id": "subnet-0a55be5b6419056b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0efe1b34363e31e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c404598cbe31320e",
            "subnet_id": "subnet-0d310dcaee53be1dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-0d310dcaee53be1dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d310dcaee53be1dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-03c7e3d87d51cb2d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "subnet-0d310dcaee53be1dc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-074fbfdb37617790f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074fbfdb37617790f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-03c7e3d87d51cb2d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "subnet-074fbfdb37617790f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:subnet/subnet-0a55be5b6419056b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a55be5b6419056b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872018225617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-03c7e3d87d51cb2d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "subnet-0a55be5b6419056b4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "learn_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:vpc/vpc-03c7e3d87d51cb2d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edbaad7baa7f4a64",
            "default_route_table_id": "rtb-0f830932d68f65028",
            "default_security_group_id": "sg-064e4d27144ec65b8",
            "dhcp_options_id": "dopt-00145aa7cf6dd16df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c7e3d87d51cb2d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f830932d68f65028",
            "owner_id": "872018225617",
            "region": "ap-south-1",
            "tags": {
              "Name": "learn-terraform-vpc"
            },
            "tags_all": {
              "Name": "learn-terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "vpc-03c7e3d87d51cb2d4",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.web-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01ca13db604661046",
            "arn": "arn:aws:ec2:ap-south-1:872018225617:instance/i-0b0f29dbcf49d7a38",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0f29dbcf49d7a38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "learn-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-083aeb075192fa31e"
              }
            ],
            "primary_network_interface_id": "eni-083aeb075192fa31e",
            "private_dns": "ip-10-0-3-162.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.162",
            "public_ip": "43.205.127.66",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0133092ba9a4962d9",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0dee842d25ad030b0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d310dcaee53be1dc",
            "tags": {
              "Name": "Web-Server-1"
            },
            "tags_all": {
              "Name": "Web-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dee842d25ad030b0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "i-0b0f29dbcf49d7a38",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_vpc.learn_terraform_vpc",
            "module.web-app.aws_key_pair.learn-aws",
            "module.web-app.aws_security_group.web_server_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01ca13db604661046",
            "arn": "arn:aws:ec2:ap-south-1:872018225617:instance/i-0f886e5e421041276",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f886e5e421041276",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "learn-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0681461ca899a17ab"
              }
            ],
            "primary_network_interface_id": "eni-0681461ca899a17ab",
            "private_dns": "ip-10-0-4-157.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.157",
            "public_ip": "65.0.19.86",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b7b67252003f16db",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0dee842d25ad030b0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074fbfdb37617790f",
            "tags": {
              "Name": "Web-Server-2"
            },
            "tags_all": {
              "Name": "Web-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dee842d25ad030b0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "i-0f886e5e421041276",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_vpc.learn_terraform_vpc",
            "module.web-app.aws_key_pair.learn-aws",
            "module.web-app.aws_security_group.web_server_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01ca13db604661046",
            "arn": "arn:aws:ec2:ap-south-1:872018225617:instance/i-026b6da304b1661c0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026b6da304b1661c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "learn-aws-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a859aa6a94b614c8"
              }
            ],
            "primary_network_interface_id": "eni-0a859aa6a94b614c8",
            "private_dns": "ip-10-0-5-104.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.104",
            "public_ip": "3.110.95.166",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0be1940a0df9262ec",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0dee842d25ad030b0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a55be5b6419056b4",
            "tags": {
              "Name": "Web-Server-3"
            },
            "tags_all": {
              "Name": "Web-Server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dee842d25ad030b0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "i-026b6da304b1661c0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_subnet.public_subnet_3",
            "module.network.aws_vpc.learn_terraform_vpc",
            "module.web-app.aws_key_pair.learn-aws",
            "module.web-app.aws_security_group.web_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.web-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872018225617:security-group/sg-0dee842d25ad030b0",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dee842d25ad030b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "8",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "872018225617",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7e3d87d51cb2d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "872018225617",
            "id": "sg-0dee842d25ad030b0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.network.aws_vpc.learn_terraform_vpc"
          ]
        }
      ]
    }
  ]
}